[package]
name = "lcms"
version = "0.1.0"
authors = ["yuenze3 <yuenze@jd.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "lcms"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.3"

[dependencies]
neon = "0.8.3"
lcms2 = "5.4.1"
