[package]
name = "lcms"
version = "0.8.0"
authors = ["yuenze3 <yuenze@jd.com>"]
license = "MIT"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "lcms"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.3"

[dependencies]
lcms2 = "5.4.1"
    [dependencies.neon]
    version = "0.8.3"
    default-features = false
    features = ["napi-4"]